# RMGE

./: .gitignore  Cargo.toml
examples/: clear_screen.rs  draw_quad.rs  scene.rs
src/: error.rs  geometry.rs  lib.rs  scene.rs  tracker.rs
src/graphics/: compile_glsl_files.bat  device_data.rs  fragment_shader.frag  mod.rs  pipeline_data.rs  swapchain_data.rs  vertex_shader.vert
src/graphics/resources/: buffer.rs  geometry.rs  mod.rs  textures.rs
