[package]
name = "rmge"
version = "0.1.0"
authors = ["TerraDOOM <look4totte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
gfx-hal = "0.5.0"
raw-window-handle = "0.3"
take_mut = "0.2"
nalgebra = "0.22"

[dev-dependencies]
shaderc = "0.6"
winit = "0.22.2"

[features]
default = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies.gfx-backend-vulkan]
version = "0.5"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.5"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5"
optional = true