[package]
authors = ["TerraDOOM <look4totte@gmail.com>"]
edition = "2018"
name = "rmge"
version = "0.1.0"
[dependencies]
arrayvec = "0.5.1"
byteorder = "*"
gfx-hal = "0.5.0"
nalgebra = "0.22"
raw-window-handle = "0.3"
take_mut = "0.2"
log = "0.4"

[dependencies.gfx-backend-vulkan]
optional = true
version = "0.5"

[dev-dependencies]
shaderc = "0.6"
winit = "0.22.2"
simple_logger = "1"

[features]
default = ["gfx-backend-vulkan"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[target]
[target."cfg(target_os = \"macos\")"]
[target."cfg(target_os = \"macos\")".dependencies]
[target."cfg(target_os = \"macos\")".dependencies.gfx-backend-metal]
optional = true
version = "0.5"

[target."cfg(windows)"]
[target."cfg(windows)".dependencies]
[target."cfg(windows)".dependencies.gfx-backend-dx12]
optional = true
version = "0.5"
